Added starter node, but some other nodes fail to render properly as a result

--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,10 @@ file, You can obtain one at http://mozilla.org/MPL/2.0/.
    fill: #ccc;
  }
 
+ .invisible{
+   visibility: hidden;
+ }
+
  text {
    /*fill: #eeefff;*/
      fill: #000;
