--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,13 @@ License, v. 2.0. If a copy of the MPL was not distributed with this
 file, You can obtain one at http://mozilla.org/MPL/2.0/.
  */
  path.link {
-
      fill: none;
      stroke: #666;
      stroke-width: 1.5px;
+ }
+
+ .connector{
+   visibility: hidden;
  }
 
  .nodeShape {
