Added to Readme. Edited html. Added math and science requirements to CS spec sheet. Added background to tooltip

--- a/css/style.css
+++ b/css/style.css
@@ -50,4 +50,5 @@ file, You can obtain one at http://mozilla.org/MPL/2.0/.
  .d3-tip{
      z-index: 10;
      opacity: 0.0;
+     background: rgba(255, 255, 255, 0.8);
  }
