--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,12 @@ file, You can obtain one at http://mozilla.org/MPL/2.0/.
    visibility: hidden;
  }
 
+.search{
+    display: flex;
+    justify-content: center;
+    /*align-content: center;*/
+}
+
  .nodeShape {
      stroke: #fff;
      stroke-width: 1.5px;
