--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-/*! JointJS v0.9.6 - JavaScript diagramming library  2015-12-19
-
-This Source Code Form is subject to the terms of the Mozilla Public
-License, v. 2.0. If a copy of the MPL was not distributed with this
-file, You can obtain one at http://mozilla.org/MPL/2.0/.
- */
  path.link {
      fill: none;
      stroke: #666;
@@ -34,14 +28,15 @@ file, You can obtain one at http://mozilla.org/MPL/2.0/.
  }
 
  .optional{
-     fill: #ff0000;
- }
-
- .coreq{
+     /*fill: #ff0000;*/
      fill: #ffff00;
  }
 
- .noType{
+ .corequisite{
+     fill: #00ffff;
+ }
+
+ .noType, .lister{
    /*fill: #bd2031;*/
    fill: #ccc;
  }
@@ -65,8 +60,48 @@ file, You can obtain one at http://mozilla.org/MPL/2.0/.
      vector-effect: non-scaling-stroke;
 }
 
- .d3-tip{
+ .nodeTip, .linkTip{
      z-index: 10;
      opacity: 0.0;
-     background: rgba(255, 255, 255, 0.8);
+     background: rgba(255, 255, 255, 0.85);
+ }
+
+ .toolbar{
+     position: fixed;
+     top: 0;
+     margin-top: 1%;
+     z-index: 1;
+ }
+
+ .key{
+     position: fixed;
+     margin-top: 1%;
+     top: 2%;
+     background-color: white;
+     z-index: 1;
+ }
+
+ .firstLine{
+     padding-top: 10px;
+ }
+
+#cyan{
+    color: #00ffff;
+}
+
+ #green{
+     color: #00ff00;
+ }
+
+ #red{
+     color: #ff0000;
+ }
+
+ #purple{
+     color: #ff00ff;
+ }
+
+ #yellow{
+     color: #ffff00;
+     font-weight: bold;
  }
