--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,13 @@
 
 .search{
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    /*align-content: center;*/
+    margin-left: 45%;
+}
+
+.content{
+    display: inline-block;
 }
 
  .nodeShape {
@@ -81,9 +86,18 @@
      z-index: 1;
  }
 
- .firstLine{
-     padding-top: 10px;
- }
+.firstLine{
+    padding-top: 10px;
+}
+
+#frontpageimage{
+    width: 30%;
+    height: 30%;
+}
+
+#searchbar{
+    width: 18em;
+}
 
 #cyan{
     color: #00ffff;
