--- a/css/style.css
+++ b/css/style.css
@@ -12,11 +12,12 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-left: 45%;
+    width: 100%;
 }
 
 .content{
     display: inline-block;
+    margin: 0 auto;
 }
 
  .nodeShape {
@@ -93,6 +94,12 @@
 #frontpageimage{
     width: 30%;
     height: 30%;
+    display: block;
+    margin: auto;
+}
+
+#none{
+    margin-left: 0px;
 }
 
 #searchbar{
